# HumbleGazeboQuad

./: .gitignore  README.md  bt.sh  runTele.sh
src/d1/: CMakeLists.txt  package.xml
src/d1/SCADs/: test.scad  test2scad.scad  test3.scad  test4.scad
src/d1/config/: bridge.yaml  d1.rviz
src/d1/launch/: d1.launch.py
src/d1/meshes/: DroneModel.FCStd  DroneModel.FCStd1  body.stl  prop_cw.stl
src/d1/models/drone_model/: model.config  model.sdf
src/d1/worlds/: drone_world.sdf
stltomoi/: body.stl  prop_ccw.stl  t1.ipynb
